# beer

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: docker.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs
examples/: floats.beer  hello.beer  short_circuit.beer
examples/modules/: io.beer  main.beer  math.beer
extensions/zed/: Cargo.toml  extension.toml
extensions/zed/languages/beer/: config.toml  highlights.scm
extensions/zed/src/: lib.rs
grammars/tree-sitter-beer/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
grammars/tree-sitter-beer/bindings/c/: tree-sitter-beer.h  tree-sitter-beer.pc.in
grammars/tree-sitter-beer/bindings/go/: binding.go  binding_test.go  go.mod
grammars/tree-sitter-beer/bindings/node/: binding.cc
grammars/tree-sitter-beer/bindings/python/tree_sitter_beer/: __init__.py  binding.c
grammars/tree-sitter-beer/bindings/rust/: build.rs  lib.rs
grammars/tree-sitter-beer/src/: grammar.json  node-types.json  parser.c
src/: ast.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  span.rs
