[package]
name = "beer-lsp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
beer-codegen = { path = "../codegen" }
beer-driver = { path = "../driver" }
beer-errors = { path = "../errors" }
beer-source = { path = "../source" }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
