[package]
name = "beer-lsp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
beer-ast = { path = "../ast" }
beer-codegen = { path = "../codegen" }
beer-driver = { path = "../driver" }
beer-errors = { path = "../errors" }
beer-source = { path = "../source" }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
tower-lsp = "0.20"
