[package]
name = "tree-sitter-beer"
description = "Beer grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "beer"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-beer"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"

# Standalone — keep out of the repo's outer workspace (`/Cargo.toml`, which
# enumerates `crates/*`). Having no `[workspace]` above would make cargo try
# to include this crate in that workspace; the empty table below forces cargo
# to treat tree-sitter-beer as its own workspace root.
[workspace]
